# github-actions-template

./: README.md  WORKFLOW_DIAGRAM.md
.github/actions/build-and-package/: action.yml
.github/actions/build-and-test/: action.yml
.github/actions/build-frontend/: action.yml
.github/actions/build-frontend-bundle/: action.yml
.github/actions/build-java-kotlin/: action.yml
projects/backend-go/: Dockerfile  go.mod
projects/backend-kotlin/: .gitignore  build.gradle.kts  manifest.json
projects/backend-python/: .gitignore  Dockerfile  main.py  pyproject.toml
projects/backend-python/.github/workflows/: master-build.yml  pr-check.yml
projects/backend-python/.github/workflows/ecs/: deploy-dev.yml
projects/backend-python/.github/workflows/eks/: deploy-dev.yml  deploy-prod.yml
projects/backend-python/.github/workflows/eks/argo/: deploy-prod.yml
projects/backend-python/src/: app.py
projects/backend-python/tests/: test_app.py  test_main.py
projects/frontend/: index.html  package.json  tsconfig.json  vite.config.ts
projects/infra/: .gitignore  0.3-providers.tf  0.4-variables.tf  1-main.tf  99-outputs.tf  main.tf  outputs.tf  variables.tf
templates/: README.md  VARIABLES_AND_SECRETS.md
templates/best-practices/: BEST_PRACTICES.md  README.md  caching-strategies.yml  error-handling-notifications.yml  matrix-multi-environment.yml  matrix-multi-version-test.yml  performance-optimization.yml  security-practices.yml  workflow-optimization.yml
templates/frontend/: e2e-tests.yml
templates/infra/: deploy-dev.yml  deploy-prod.yml  pr-check.yml
(+124 files in other folders)
