[tool.poetry]
name = "backend-python"
version = "0.1.0"
description = "Python backend service"
authors = ["spartan <spartan@c0x12c.com>"]
readme = "README.md"
packages = [{include = "backend_python", from="src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
ruff = "^0.4.4"
black = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
